# cpp

./: .gitignore  1.cpp  26.cpp  27.cpp  3.cpp  30.cpp  31.c  4.cpp  6.cpp  7.cpp  ATT00017.doc  CMakeLists.txt  LockInheritance.cpp  NoArgFunction.out  a.out  a1.c  a2.c  adapter.cpp  adapter2.cpp  after_singleton.cpp  aggregation.cpp  bridge2.cpp  bridge_correct.cpp  chain2.cpp  chain_of_resp.cpp  complex.cpp  copyconst.cpp  defaultconstr.cpp  events.cpp  ex0.cpp  for_each_l.cpp  fourwheeler.cpp  getline.out  gettimeofday.cpp  git-author-rewrite.sh  hello.cpp  int.cpp  intvec.cpp  lambda.cpp  list.cpp  (+29 more)
ERULES/: CMakeLists.txt
The first commit of Ali/: test2.txt
abstract_factory/: a.out
adv_topics/: CMakeLists.txt  calculator.cpp  constructors.cpp  data_members.cpp  define_a_class.cpp  implicit_explicit.cpp  incr_decr.cpp  member_function.cpp  namespace.cpp  polynomial.cpp  rational.cpp  rational2.cpp  simple_dynamic_memory.cpp
alarm/: a.out
andreybuday/: facade
bridge/: Logger.h  LoggerImpl.cpp  LoggerImpl.h
brownie/: BrownieLib.doxygen.rar  BrownieLib.mht  BrownieLib.rtf  ServiceCallable.mht
callable_objects/: functors.cpp
console_games/: CMakeLists.txt  command.cpp  probability_game.cpp
core_guidelines/: CMakeLists.txt  copy_elision.cpp
core_guidelines/third/: CMakeLists.txt  const_template_param.cpp  const_vector_iter.cpp  mutable.cpp  return_const_string.cpp
cppunit/: CMakeLists.txt  Complex.cpp  Complex.hpp  ComplexNumberFixture.cpp  ComplexNumberFixture.hpp  ComplexNumberSuite.cpp  ComplexNumberSuite.hpp  ComplexNumberTest.cpp  TestBasicMath.cpp  cppunit_headers.hpp  main.cpp  makefile  newtest.cpp
cppunit/common_library/: CMakeLists.txt  main.cpp  testRunner.cpp
cppunit_tets/: CBasicMath.hpp  TestBasicMath.cpp
design_patterns/: CMakeLists.txt  army.cpp  before_singleton.cpp  factory_method.cpp  fahrenheit_adapter.cpp  fahrenheit_adapter_adjust.cpp  myobserver.cpp  observer.cpp  singleton.cpp  tetromino2.cpp  warrior.cpp
design_patterns/homeacc/: CMakeLists.txt  homeacc.cpp  homeacc.hpp  logger.h  mainlogger.cpp  test_homeacc.cpp
embedded/: BLUETOOTH_CAR_not_working.ino  DHT-temperature_humidity.ino  DHT11_LCD_I2C.ino  LCD_SOIL.ino  PIR_led.ino  bluetooth_4wd_car_4.0.ino  bluetooth_string_4wd_car.ino  gerkon.ino  gerkon3.ino  lcd_soil_2leds.ino  lcd_soil_percent.ino  meteostation_v3.ino  meteostation_v4.ino  move_remote_control.ino  moving_forward.ino  semaphore.ino  sketch21.ino
events/: EventDispatcher.h  main.cpp  makefile
exception_handling/: CMakeLists.txt  Date.cpp  Date.hpp  basic_guarantee.cpp  basic_guarantee_test.cpp  basic_strong_nothrow_guarantees.cpp  except.throw.cpp  stack_unwinding.cpp
exception_handling/std_exception/: makefile
expressions/: CMakeLists.txt  comma_operator.cpp  value_category.cpp
facade/: facade.cpp  makefile
games/: 2048.cpp
hackerrank/: CMakeLists.txt  abstract-classes-polymorphism.cpp  boxit.cpp  pretty_print.cpp  task1.cpp  task2.cpp  undefined_behavior.cpp  valid_parenthesis.cpp
hellomake/: hellofunc.c  hellomake.h
homeacc/: homeacc.cpp  homeacc.out  logger.cpp  makefile
internal_concepts/: CSampleComponent.cpp  CSampleComponent.hpp  CSampleDemoService.cpp
interrupts/: CMakeLists.txt  NoArgFunction.cpp  async.cpp  interrupts_timer.cpp  syslog.c
interrupts/brownie/CommunicationSample/: .AcyncCalculatorB.cpp.swp  AcyncCalculator.cpp  AcyncCalculatorB.cpp  AcyncCalculatorB.hpp  CommunicationTest.sln  CommunicationTest.vcxproj.filters  stdafx.cpp
interrupts/brownie/CommunicationSample/Communication/: Attribute.hpp
interrupts/brownie/CommunicationSample/common/: Void.hpp
interrupts/brownie/sample/: sample_component.uxf
interrupts/brownie/sample.v2/Backup/: sample.sln
interrupts/brownie/sample.v2/asynch/impl/: StdCallbackFacilityImpl.hpp
interrupts/brownie/sample.v2/asynch/logging/: LocalCallable.hpp
interrupts/brownie/sample.v2/sample/: brownie_test.cpp
interrupts/brownie/sample/asynch/: Jamfile
interrupts/brownie/sample/asynch/impl/: OperationCommunicationFacility.hpp
interrupts/brownie/sample/sample/Debug/sample.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  sample.lastbuildstate
interrupts/brownie/timer_project/asynch/: FormalNotification.hpp
interrupts/brownie/timer_project/asynch/impl/: JobExecutor.cpp
interrupts/brownie/timer_project/asynch/log/: LocalCallback.hpp
interrupts/brownie/timer_project/asynch/logging/: LocalCallbackConcreteNotification.hpp  StdNotificationAllocator.hpp
interrupts/events/: CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.h  main.cpp
interrupts/events2/: EventDispatcher.cpp
iterator/: a.out  iterator2.cpp  makefile
js/: index.html  rock_paper_scissors.js
linkers/: makefile  naming_main.c  naming_of_parts.h
linux/: CMakeLists.txt  fork.c
make_sample/: makefile
make_sample2/: MyMakefile  adv_makefile  main.cpp
memory_management/: CMakeLists.txt  deep_and_shallow_copy.cpp  my_shared_ptr.cpp  simple_delete.cpp  template_class.cpp  unnamed_temporary.cpp
mysql/: main.cpp  makefile  select.cpp
mysql_c_api/: makefile
observer/: ASubject.cpp  ASubject.h  DummyProduct.cpp  DummyProduct.h  IObserver.h  Shop.h  main.cpp  makefile
oop/: CMakeLists.txt  LockInheritance.cpp  LockInheritance_c++11.cpp  bank.cpp  cat.cpp  clock.cpp  destructor.cpp  ex1.cpp  field_init_sequence.cpp  init.cpp  multiple2.cpp  multiple_inheritance.cpp  sedans.cpp  string.cpp  virtual.cpp  virtual1.cpp  virtual2.cpp  virtual3.cpp  virtual_static.cpp
overloading/: CMakeLists.txt  assign.cpp  assign_op_with_ptr.cpp  assign_op_with_ptr_array.cpp  overload_typecast.cpp  vector_overalod_typecast.cpp
pacman/: main.cpp
pascal_projects/: prj1  prj1.pas  prj4  prj4.pas
point/: Point.h  Rectangle.h  main  main.cpp  makefile
templates/: CMakeLists.txt  instantiation_without_calling.cpp  number_of_instantiations.cpp  part_func_spec.cpp  perfect_forwarding.cpp  template_spec_with_char_array.cpp  variadic_function_templates.cpp
unittest/exceptions/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
(+222 files in other folders)
