
cmake_minimum_required(VERSION 3.17)
project (advanced_topics)
add_executable(define_a_class define_a_class.cpp)
add_executable(data_members data_members.cpp)
add_executable(member_function member_function.cpp)
add_executable(constructors constructors.cpp)
add_executable(implicit_explicit implicit_explicit.cpp)
add_executable(namespace namespace.cpp)
add_executable(simple_dynamic_memory simple_dynamic_memory.cpp)
add_executable(calculator calculator.cpp)
add_executable(rational rational.cpp)
add_executable(polynomial polynomial.cpp)
add_executable(rational2 rational2.cpp)
add_executable(incr_decr incr_decr.cpp)
